--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.3",
-    "tailwind-override": "^0.6.1"
+    "tailwind-override": "^0.6.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
