--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.4",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-loading-skeleton": "^3.4.0",
