--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "author": "tle2 group",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.1.0",
     "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
