--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "cmgt-tle2-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./api/index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "start": "cross-env NODE_ENV=production node app.js",
+    "dev": "cross-env NODE_ENV=development nodemon ./api/index.js",
+    "start": "cross-env NODE_ENV=production node ./api/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
