Update env.example file

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,3 +4,11 @@ MONGO_HOST=
 MONGO_PORT=
 API_PORT=
 JWT_SECRET=
+
+OPENAI_API_TYPE=
+OPENAI_API_VERSION=
+OPENAI_API_BASE=
+AZURE_OPENAI_API_KEY=
+DEPLOYMENT_NAME=
+ENGINE_NAME=
+INSTANCE_NAME=
