--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.2.5",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
