--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "author": "tle2 group",
   "license": "ISC",
   "dependencies": {
+    "@langchain/openai": "^0.1.0",
     "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.2.5",
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
