--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.3.4",
     "nodemon": "^3.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.3.0",
